# sentinel

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  build-images.sh  package.json  pom.xml
backend/: .env.example  Cargo.toml  Dockerfile  build.rs
backend/migrations/: 20260114181334_initial-schema.down.sql  20260114181334_initial-schema.up.sql  20260114191902_seed_default_categories.down.sql  20260114191902_seed_default_categories.up.sql
backend/src/: database.rs  error.rs  main.rs
backend/src/grpc/: authentication.rs  mod.rs  punishment.rs  report.rs
backend/src/handler/: broadcast.rs  mod.rs
backend/src/models/: message.rs  mod.rs  player.rs  punishment.rs
backend/src/services/: broadcast_service.rs  message_service.rs  mod.rs  player_service.rs  punishment_service.rs  report_service.rs
common/proto/: authentication.proto  punishment.proto  report.proto
development/: .gitignore  docker-compose.dev.yml
development/postgres/init/: 01-create-sentinel-test-db.sql
development/velocity/: forwarding.secret  velocity.toml
minecraft/: .gitignore  build-and-deploy.sh  deploy.sh  pom.xml
minecraft/src/main/resources/: plugin.yml  velocity-plugin.json
webpanel/: .env.example  .gitignore  Dockerfile  generate-proto.sh  middleware.ts  next.config.ts  package.json
webpanel/src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
webpanel/src/app/me/: page.tsx
webpanel/src/components/auth/: PasswordChangeRedirect.tsx  SessionProviderWrapper.tsx
webpanel/src/lib/auth/: auth.ts
webpanel/types/: global.d.ts  next-auth.d.ts
(+24 files in other folders)
