[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
serde_json = "1.0.149"
dotenvy = { version = "0.15" }
sqlx = { version = "0.8", features = ["postgres", "uuid", "chrono", "time", "ipnetwork", "json", "runtime-tokio-rustls"] }
jsonwebtoken = { version = "10.2", features = ["rust_crypto"] }
validator = "0.20.0"
tonic = "0.14"
prost = "0.14"
chrono = { version = "0.4", features = ["serde"] }
tonic-prost = "0.14"
sha2 = "0.10"

[build-dependencies]
tonic-prost-build = "0.14"

